--- a/1_analysis/9b_missingness_precede_follow_weekly_si.Rmd
+++ b/1_analysis/9b_missingness_precede_follow_weekly_si.Rmd
@@ -79,10 +79,12 @@ risk_weekly$riskOne <- recode(risk_weekly$riskOne,"never"=1,"rarely"=2,"sometime
 
 # Get max SI each week
 risk_weekly_summary = risk_weekly %>%
-  dplyr::select(ID, week, riskOne) %>%
+  dplyr::select(ID, week, riskOne, riskTwo, riskThree) %>%
   ungroup() %>%
   group_by(ID, week) %>%
-  summarise(riskOne = max(riskOne, na.rm = TRUE)) 
+  summarise(riskOne = max(riskOne, na.rm = TRUE),
+            riskTwo = ifelse(sum(riskTwo == 'yes', na.rm=TRUE)>0, 1, 0),
+            riskThree = ifelse(sum(riskThree == 'yes', na.rm=TRUE)>0, 1, 0)) 
 
 risk_weekly_summary = risk_weekly_summary %>%
   mutate(risk= ifelse(is.infinite(riskOne), NA_real_, riskOne)) %>%
@@ -90,8 +92,14 @@ risk_weekly_summary = risk_weekly_summary %>%
   mutate(si_within = risk - mean(risk, na.rm = TRUE),
          si_between = mean(risk, na.rm = TRUE),
          si_bin = risk >= 4,
+         trigger = ifelse(si_bin == TRUE | riskTwo ==1 | riskThree ==1, 1, 0),
          si_within_lead1 = lead(si_within, n = 1),
          si_bin_lead1 = lead(si_bin, n = 1))
+
+
+triggers = dplyr::filter(risk_weekly_summary, trigger == 1)
+length(unique(triggers$ID))
+
 
 # Summarize daily missingness for each week, and lag 1 week behind to get the 7 days leading up to each SI survey
 weekly_si_daily_summary = daily %>%
@@ -100,7 +108,7 @@ weekly_si_daily_summary = daily %>%
   left_join(., risk_weekly_summary, by = c('ID', 'week')) %>%
   pivot_longer(c('missing_daily', 'missing_gps', 'missing_accel', 'missing_keyboard'),
                names_to = 'name', values_to = 'missing_prop') %>%
-  group_by(name, ID, week, si_within) %>%
+  group_by(name, ID, week, si_within, trigger) %>%
   summarise(missing_prop = mean(missing_prop)*7, # mean will be # of missing days
             summerbreak=summerbreak[1],
             personal_time_z=personal_time_z[1]) %>%
@@ -126,6 +134,19 @@ models_missingness_predict_si = weekly_si_daily_summary %>%
                               'missing_keyboard'='Keyboard Input',
                               'missing_daily'='Daily Mood Survey'))
 
+models_missingness_predict_trigger = weekly_si_daily_summary %>% 
+  group_by(name) %>%
+  nest() %>%
+  mutate(model = map(data, ~brms::brm(data = ., trigger ~ missing_prop_lag + summerbreak + personal_time_z + (missing_prop_lag|ID),
+                                      chains = 4, cores = 4, iter = 4000, seed = 11291993, prior = beta_prior,
+                                      family = bernoulli(link = 'logit'))),
+         coef = map(model, ~broom.mixed::tidy(., conf.int = TRUE))) %>% 
+  mutate(name = dplyr::recode(name,
+                              'missing_accel'='Accelerometer',
+                              'missing_gps'='GPS',
+                              'missing_keyboard'='Keyboard Input',
+                              'missing_daily'='Daily Mood Survey'))
+
 models_missingness_predict_si_discrete = weekly_si_daily_summary %>% 
   mutate(missing_prop_lag = as.character(round(missing_prop_lag))) %>%
   group_by(name) %>%
@@ -140,10 +161,11 @@ models_missingness_predict_si_discrete = weekly_si_daily_summary %>%
                               'missing_daily'='Daily Mood Survey'))
 
 
-brms::prior_summary(models_missingness_predict_si$model[[1]]) 
-
 save(models_missingness_predict_si,
      file = 'model_outputs/missingness_predict_next_week_si_brm.rda')
+
+save(models_missingness_predict_trigger,
+     file = 'model_outputs/missingness_predict_next_week_trigger_brm.rda')
 
 save(models_missingness_predict_si_discrete,
      file = 'model_outputs/missingness_predict_next_week_si_discrete_brm.rda')
@@ -152,6 +174,8 @@ save(models_missingness_predict_si_discrete,
 ```{r}
 load('model_outputs/missingness_predict_next_week_si_brm.rda')
 load('model_outputs/missingness_predict_next_week_si_discrete_brm.rda')
+load('model_outputs/missingness_predict_next_week_trigger_brm.rda')
+
 ```
 
 ## Extract Coefs
@@ -172,8 +196,20 @@ missingness_predict_si_coef_corrected = models_missingness_predict_si %>%
   dplyr::select(-data, -model) %>%
   mutate(corrected = 'Corrected')
 
+missingness_predict_trigger_coef = models_missingness_predict_trigger %>%
+  unnest(coef) %>%
+  dplyr::select(-data, -model) %>%
+  mutate(corrected = 'Uncorrected')
+
+missingness_predict_trigger_coef_corrected = models_missingness_predict_trigger %>%
+  mutate(coef = map(model, ~broom.mixed::tidy(., conf.int = TRUE, conf.level = corrected_conf_level))) %>% 
+  unnest(coef) %>%
+  dplyr::select(-data, -model) %>%
+  mutate(corrected = 'Corrected')
+
 
 missingness_predict_si_coef = rbind(missingness_predict_si_coef, missingness_predict_si_coef_corrected)
+missingness_predict_trigger_coef = rbind(missingness_predict_trigger_coef, missingness_predict_trigger_coef_corrected)
 
 missingness_predict_si_model_predictions = models_missingness_predict_si %>%
   mutate(preds = purrr::map(model, ~emmeans::emmeans(., specs = 'missing_prop_lag', weights = 'proportional',
@@ -210,6 +246,21 @@ missingness_predict_si_coef_plot = missingness_predict_si_coef %>%
   ylim(-.025, .025) +
   annotate(geom='text', x = 0.67, y = -0.01, label = 'More missing data-->\nless frequent SI next week', size = 4) +
   annotate(geom='text', x = 0.67, y = 0.01, label = 'More missing data-->\nmore frequent SI next week', size = 4)
+
+
+missingness_predict_trigger_coef_plot = missingness_predict_trigger_coef %>%
+  dplyr::filter(term == 'missing_prop_lag', corrected == 'Corrected') %>%
+  ggplot(data =., aes(x = name, y = estimate)) +
+  geom_hline(yintercept = 0, lty=2) + 
+  geom_point(aes(color = name), size = 3) +
+  geom_errorbar(aes(ymin = conf.low, ymax = conf.high, color = name), width = 0) +
+  geom_errorbar(data =missingness_predict_trigger_coef %>%
+        dplyr::filter(term == 'missing_prop_lag', corrected == 'Uncorrected'), 
+        aes(ymin = conf.low, ymax = conf.high, color = name), width = 0, lwd = 2) +
+  coord_flip() + 
+  scale_color_manual(values =pal2) +
+  theme(legend.position = 'none') +
+  labs(x = NULL, y = 'Logistic Regression Beta Coefficient', title = 'A) Number of days missing data during 1 week prior\nas a predictor of ESM-triggered risk assessment')
 ```
 
 
@@ -298,10 +349,12 @@ missingness_predict_si_plot_daily_gps = ggplot(missingness_predict_si_model_pred
 ```{r}
 # Only weeks with observed SI responses
 risk_weekly_summary_observed = dplyr::filter(risk_weekly, !is.na(riskOne)) %>%
-  dplyr::select(ID, week, riskOne) %>%
+  dplyr::select(ID, week, riskOne, riskTwo, riskThree) %>%
   ungroup() %>%
   group_by(ID, week) %>%
-  summarise(riskOne = max(riskOne))
+  summarise(riskOne = max(riskOne),
+            riskTwo = ifelse(sum(riskTwo == 'yes', na.rm=TRUE)>0, 1, 0),
+            riskThree = ifelse(sum(riskThree == 'yes', na.rm=TRUE)>0, 1, 0))
 
 risk_weekly_summary_observed$riskOne <- recode(risk_weekly_summary_observed$riskOne,"never"=1,"rarely"=2,"sometimes"=3, "often"=4, "allTheTime"=5)
 
@@ -315,7 +368,8 @@ daily_weekly_si = daily_weekly_si %>%
   group_by(ID) %>%
   mutate(si_within = riskOne - mean(riskOne, na.rm = TRUE),
          si_between = mean(riskOne, na.rm = TRUE),
-         si_bin = riskOne >= 4) %>%
+         si_bin = riskOne >= 4,
+        trigger = ifelse(si_bin == TRUE | riskTwo ==1 | riskThree ==1, 1, 0)) %>%
   ungroup()
 
 
@@ -326,6 +380,7 @@ daily_weekly_si_grouped_weeks = daily_weekly_si %>%
          si_within = si_within[1],
          si_between = si_between[1],
          si_bin = si_bin[1],
+         trigger=trigger[1],
          summerbreak = summerbreak[1],
          personal_time_z = personal_time_z[1],
          prop_missing_daily = mean(missing_daily)*7,
@@ -345,6 +400,14 @@ models_si_predict_missingness = daily_weekly_si %>%
   nest() %>%
   mutate(model = map(data, ~brms::brm(data = ., value ~ si_within + si_between + summerbreak + personal_time_z + (si_within|ID),
                                         family = bernoulli(link = 'logit'), chains = 4, cores = 4, iter = 4000, seed = 11291993, prior = beta_prior)))
+
+
+models_trigger_predict_missingness = daily_weekly_si %>%
+  pivot_longer(c(contains('missing'), -contains('lag1'))) %>%
+  group_by(name) %>%
+  nest() %>%
+  mutate(model = map(data, ~brms::brm(data = ., value ~ trigger + summerbreak + personal_time_z + (trigger|ID),
+                                        family = bernoulli(link = 'logit'), chains = 4, cores = 4, iter = 4000, seed = 11291993, prior = beta_prior)))
 ```
 
 ### Model outcomes weekly (with linear regression)
@@ -354,6 +417,14 @@ models_si_predict_missingness_weekly = daily_weekly_si_grouped_weeks %>%
   group_by(name) %>%
   nest() %>%
   mutate(model = map(data, ~brms::brm(data = ., value ~ si + summerbreak + personal_time_z + (si|ID),
+                                        chains = 4, cores = 4, iter = 4000, seed = 11291993, prior = beta_prior)))
+
+
+models_trigger_predict_missingness_weekly = daily_weekly_si_grouped_weeks %>%
+  pivot_longer(c(contains('prop_missing'))) %>%
+  group_by(name) %>%
+  nest() %>%
+  mutate(model = map(data, ~brms::brm(data = ., value ~ trigger + summerbreak + personal_time_z + (trigger|ID),
                                         chains = 4, cores = 4, iter = 4000, seed = 11291993, prior = beta_prior)))
 
 models_si_predict_missingness_weekly_discrete = daily_weekly_si_grouped_weeks %>%
@@ -382,6 +453,17 @@ or_within_si_predict_missingness = models_si_predict_missingness %>%
   dplyr::select(-data, -model) %>%
   mutate('type'='Mean SI Severity')
 
+or_within_trigger_predict_missingness = models_trigger_predict_missingness %>%
+  mutate(or = purrr::map(model, ~emmeans::emmeans(., specs = 'trigger', type = 'response',
+                                                  at = list('trigger'=c(0,1))) %>%
+                           pairs(reverse = TRUE) %>%
+                           confint(level = 0.95) %>%
+                           data.frame()
+    
+  )) %>%
+  unnest(or) %>%
+  dplyr::select(-data, -model) 
+
 or_between_si_predict_missingness = models_si_predict_missingness %>%
   mutate(or = purrr::map(model, ~emmeans::emmeans(., specs = 'si_between', type = 'response',
                                                   at = list('si_between'=c(0,1))) %>%
@@ -407,6 +489,11 @@ coef_si_predict_missingness_weekly = models_si_predict_missingness_weekly %>%
   unnest(coef) %>%
   dplyr::select(-data, -model) 
 
+coef_trigger_predict_missingness_weekly = models_trigger_predict_missingness_weekly %>%
+  mutate(coef = map(model, ~broom.mixed::tidy(., conf.int = TRUE))) %>%
+  unnest(coef) %>%
+  dplyr::select(-data, -model) 
+
 models_si_predict_missingness_predictions_weekly = models_si_predict_missingness_weekly %>%
   mutate(pred_grid = purrr::map(model, ~conditional_effects(., plot = FALSE)$si)) %>%
   unnest(pred_grid) %>%
@@ -427,6 +514,7 @@ models_si_predict_missingness_predictions_weekly_discrete = models_si_predict_mi
 
 ```{r}
 save(models_si_predict_missingness, 
+     models_trigger_predict_missingness_weekly,
      models_si_predict_missingness_predictions,
      or_within_si_predict_missingness, or_between_si_predict_missingness,
      models_si_predict_missingness_weekly,
@@ -455,9 +543,25 @@ or_within_si_predict_missingness_corrected = models_si_predict_missingness %>%
   mutate('type'='Mean SI Severity', 
          corrected = 'Corrected')
 
-or_within_si_predict_missingness = mutate(or_within_si_predict_missingness, corrected = 'Uncorrected')
 
+
+or_within_trigger_predict_missingness_corrected = models_trigger_predict_missingness %>%
+  mutate(or = purrr::map(model, ~emmeans::emmeans(., specs = 'trigger', type = 'response',
+                                                  at = list('trigger'=c(0,1))) %>%
+                           pairs(reverse = TRUE) %>%
+                           confint(level = m) %>%
+                           data.frame()
+    
+  )) %>%
+  unnest(or) %>%
+  dplyr::select(-data, -model) %>%
+  mutate(corrected = 'Corrected')
+
+or_within_si_predict_missingness = mutate(or_within_si_predict_missingness, corrected = 'Uncorrected')
 or_within_si_predict_missingness = rbind(or_within_si_predict_missingness, or_within_si_predict_missingness_corrected)
+
+or_within_trigger_predict_missingness = mutate(or_within_trigger_predict_missingness, corrected = 'Uncorrected')
+or_within_trigger_predict_missingness = rbind(or_within_trigger_predict_missingness, or_within_trigger_predict_missingness_corrected)
 
 si_models_or_plot = or_within_si_predict_missingness %>% mutate(name = dplyr::recode(name,
                               'missing_accel'='Accelerometer',
@@ -484,6 +588,35 @@ si_models_or_plot = or_within_si_predict_missingness %>% mutate(name = dplyr::re
   annotate(geom='text', x = 0.67, y = 0.8, label = 'More frequent SI-->\nless missing data next week', size = 4) +
   annotate(geom='text', x = 0.67, y = 1.3, label = 'More frequent SI-->\nmore missing data next week', size = 4) 
 
+
+trigger_models_or_plot = or_within_trigger_predict_missingness %>% mutate(name = dplyr::recode(name,
+                              'missing_accel'='Accelerometer',
+                              'missing_gps'='GPS',
+                              'missing_keyboard'='Keyboard Input',
+                              'missing_daily'='Daily Mood Survey')) %>%
+  dplyr::filter(corrected == 'Corrected') %>%
+  ggplot(data = ., aes(x = name, y = odds.ratio)) +
+  geom_hline(yintercept = 1, lty=2) + 
+  geom_point(aes(color = name), size = 3) +
+  geom_errorbar(data = or_within_trigger_predict_missingness %>% mutate(name = dplyr::recode(name,
+                              'missing_accel'='Accelerometer',
+                              'missing_gps'='GPS',
+                              'missing_keyboard'='Keyboard Input',
+                              'missing_daily'='Daily Mood Survey')) %>%
+                            dplyr::filter(corrected == 'Uncorrected'), 
+                aes(ymin = lower.HPD, ymax = upper.HPD, color = name), width = 0, lwd = 2) +
+  geom_errorbar(aes(ymin = lower.HPD, ymax = upper.HPD, color = name), width = 0) +
+  coord_flip() + 
+  scale_y_log10() +
+  scale_color_manual(values =pal2) +
+  theme(legend.position = 'none') +
+  labs(x = NULL, y = 'Adjusted Odds Ratio', title = 'B) ESM-Triggered Risk Assessment\n as a predictor of missing data probability over the next week') +
+  annotate(geom='text', x = 0.67, y = 0.3, label = 'ESM-Triggered Risk Assessment-->\nless missing data next week', size = 4) +
+  annotate(geom='text', x = 0.67, y = 5, label = 'ESM-Triggered Risk Assessment-->\nmore missing data next week', size = 4) 
+
+
+trigger_grid = cowplot::plot_grid(missingness_predict_trigger_coef_plot, trigger_models_or_plot, nrow = 2)
+cowplot::save_plot(trigger_grid, filename = '../../figures/supplement/ema_trigger_missingness.png', base_width = 9, base_height = 8)
 ```
 
 ```{r}
